--- a/aula-04/index.html
+++ b/aula-04/index.html
@@ -1,111 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desempenho de times</title>
+    <title>tabelas</title>
 </head>
-
 <body>
-    <table border="" style="text-align: center;">
-        <thead>
-            <tr>
-                <td colspan="3"></td>
-                <th colspan="3" scope="colgroup">Desempenho</th>
-            </tr>
-            <tr>
-                <th scope="col">Região</th>
-                <th scope="col">Estado</th>
-                <th scope="col">Time</th>
-                <th scope="col">Brasileirão</th>
-                <th scope="col">Copa do Brasil</th>
-                <th scope="col">Copa Sul americana</th>
-            </tr>
-        </thead>
-
-        <tbody>
-            <tr>
-                <th rowspan="6" scope="rowgroup">Suldeste</th>
-                <th rowspan="3" scope="rowgroup">São paulo</th>
-                <th scope="row">Corinthians</th>
-                <td>6° Lugar</td>
-                <td>Quartas de final</td>
-                <td>Final</td>
-            </tr>
-            <tr>
-                <th scope="row">Palmeiras</th>
-                <td>2° Lugar</td>
-                <td>Preliminares</td>
-                <td>Oitavas de final</td>
-            </tr>
-            <tr>
-                <th scope="row">Santos</th>
-                <td>3° Lugar</td>
-                <td>Semi-final</td>
-                <td>Quartas de final</td>
-            </tr>
-            <tr>
-                <th rowspan="3" scope="rowgroup">Rio de Janeiro</th>
-                <th scope="row">Flamengo</th>
-                <td>1° Lugar</td>
-                <td>Final</td>
-                <td>Final</td>
-            </tr>
-            <tr>
-                <th scope="row">Fluminense</th>
-                <td>4° Lugar</td>
-                <td>Semi-final</td>
-                <td>Quartas de Final</td>
-            </tr>
-            <tr>
-                <th scope="row">Vasco</th>
-                <td>5° Lugar</td>
-                <td>Final</td>
-                <td>Campeão</td>
-            </tr>
-            <tr>
-                <th rowspan="6" scope="rowgroup">Nordeste</th>
-                <th rowspan="3" scope="rowgroup">Ceará</th>
-                <th scope="row">Caucaia</th>
-                <td>9° Lugar</td>
-                <td>Final</td>
-                <td>Campeão</td>
-            </tr>
-            <tr>
-                <th scope="row">Icasa</th>
-                <td>9° Lugar</td>
-                <td>Final</td>
-                <td>Campeão</td>
-            </tr>
-            <tr>
-                <th scope="row">Ferroviário</th>
-                <td>9° Lugar</td>
-                <td>Final</td>
-                <td>Campeão</td>
-            </tr>
-            <tr>
-                <th rowspan="3" scope="rowgroup">Bahia</th>
-                <th scope="row">Vitória</th>
-                <td>9° Lugar</td>
-                <td>Final</td>
-                <td>Campeão</td>
-            </tr>
-            <tr>
-                <th scope="row">Fluminense de feira</th>
-                <td>9° Lugar</td>
-                <td>Final</td>
-                <td>Campeão</td>
-            </tr>
-            <tr>
-                <th scope="row">Itabuna</th>
-                <td>9° Lugar</td>
-                <td>Final</td>
-                <td>Campeão</td>
-            </tr>
-
-        </tbody>
-    </table>
+    <h1>Tabelas</h1>
+    <hr>
+    <a href="tabelas/compras/index.html">Compras</a>
+    <a href="tabelas/horarios/index.html">Horários</a>
+    <a href="tabelas/times/index.html">Times</a>
 </body>
-
 </html>
