atualização de arquivos

--- a/aula-04/index.html
+++ b/aula-04/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Tabelas</h1>
     <hr>
-    <a href="tabelas/compras/index.html">Compras</a>
-    <a href="tabelas/horarios/index.html">Horários</a>
+    <a href="tabelas/compras/index.html">Compras</a> <br>
+    <a href="tabelas/horarios/index.html">Horários</a> <br>
     <a href="tabelas/times/index.html">Times</a>
 </body>
 </html>
